# course2_lab7

./: CMakeLists.txt  controller.cpp  controller.hpp  hash.cpp  hash.hpp  main.cpp  mask.cpp  mask.hpp  scanner.cpp  scanner.hpp
test/: sup.txt
test/dir1/: file3.txt
test/dir2/: file2_1.txt  file4.txt
